Bug 71590 - drmOpen fails with exynos-drm
Summary: drmOpen fails with exynos-drm
Status: RESOLVED FIXED
Alias: None
Product: plymouth
Classification: Unclassified
Component: general (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Ray Strode [halfline]
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-11-13 21:57 UTC by Daniel Drake
Modified: 2013-12-03 15:28 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
drm: simplify device open (2.57 KB, patch)
2013-11-25 21:43 UTC, Daniel Drake
Details | Splinter Review

Description Daniel Drake 2013-11-13 21:57:20 UTC
The DRM plugin is failing on exynos as it finds driver name "exynos-drm" in find_driver_for_device() and then passes this to drmOpen().

drmOpen() fails with error -1 after not finding any matching devices, drmOpen will instead only accept name "exynos" for this setup.

I'm wondering if it would be more appropriate to call drmOpenMinor() or drmOpenDevice() passing the major/minor number of the DRI device node that plymouth already knows about.

Or, observe that the drmOpen family are just wrappers for open(), and we call open() ourselves directly?

plymouth-0.8.8.
Comment 1 Daniel Drake 2013-11-25 21:42:38 UTC
drmOpenMinor() and friends are not part of the libdrm API. So I think open() is the right answer here.
Comment 2 Daniel Drake 2013-11-25 21:43:28 UTC
Created attachment 89788 [details] [review]
drm: simplify device open
Comment 3 Ray Strode [halfline] 2013-12-03 15:28:49 UTC
thanks, pushed with minor changes.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.